--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -40,7 +40,7 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \begin{equation}
 W_{\mu}(z) = (5s-2)\frac{3H^{2}_{0}\Omega_{m}(1+z)}{2c^{2}k^{2}} \int_{z}^{\infty} dz^{\prime}\frac{dN}{dz} \frac{r(z^{\prime}) - r(z)}{r(z^{\prime})r(z)},
 \end{equation}
-\mr{where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $c$ is the speed of light, and $s$ is the response of the number density of galaxies to achromatic changes in the brightness. The parameter $s$ is estimated through shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection. Our LRG targets are selected based on the fiber flux, whose response to magnification is different from the total flux and depends on the shape parameters for each morphology type \citep{zhou2023desi}. The parameter $s$ for our sample is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for DESI\footnote{Private communication with Dr. Rongpu Zhou.}. We fix $s$ to the central values in our analysis.} The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
+\mr{where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $c$ is the speed of light, and $s$ is the slope of the number count function \citep{2008PhRvD..77b3512L} which quantifies the response of the number density of galaxies to achromatic changes in the brightness. The parameter $s$ is estimated by shifting all magnitudes by an infinitesimal amount and re-running the color-mag selection, with the caveat that for a fiber flux-selected sample, like the DESI LRG targets, the impact of magnification on fiber flux depends on the shape parameters for each morphology type \citep{zhou2023desi}. The parameter $s$ for our sample is found to vary slightly in the different imaging regions: $s=0.951\pm 0.011$ for BASS+MzLS, $s=0.943 \pm 0.007$ for DECaLS North+DECaLS South, and $s=0.945\pm 0.006$ for DESI\footnote{Private communication with Dr. Rongpu Zhou.}. We fix $s$ to the central values in our analysis.} The PNG-induced scale-dependent shift is given by \citep{slosar2008constraints}
 \begin{equation}
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
@@ -62,7 +62,9 @@ We convert this convolution in the spherical harmonic space into a multiplicatio
 \begin{align}
     \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm window}~P_{\ell}(\cos\theta) d\cos\theta.
 \end{align}
-\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for the different masks representing the DESI footprint and its imaging sub-regions. The smaller the region the sooner the mask correlation drops to zero (see \textit{area} in Table \ref{tab:imaging}).} The integral constraint is another systematic effect which is induced since the mean galaxy density is estimated from the observed galaxy density, and therefore is biased by the limited sky coverage \citep{peacock1991large}. To account for the integral constraint, the survey mask power spectrum is used to introduce a scale-dependent correction factor that needs to be subtracted from the power spectrum as,
+\mr{Figure \ref{fig:mask2pf} illustrates ${\hat \omega}^{\rm window}$ for the different masks representing the DESI footprint and its imaging sub-regions. We present a benchmark of our method against the direct mode-mode coupling matrix approach in Appendix \ref{ssec:windowconv}.} 
+
+The integral constraint is another systematic effect which is induced since the mean galaxy density is estimated from the observed galaxy density, and therefore is biased by the limited sky coverage \citep{peacock1991large}. To account for the integral constraint, the survey mask power spectrum is used to introduce a scale-dependent correction factor that needs to be subtracted from the power spectrum as,
 \begin{equation}
      \tilde{C}^{\rm model, IC}_{\ell} = \tilde{C}^{\rm model}_{\ell} - \tilde{C}^{\rm model}_{\ell=0} \left(\frac{\tilde{C}^{\rm window}_{\ell}}{\tilde{C}^{\rm window}_{\ell=0}}\right),
 \end{equation}
@@ -93,112 +95,12 @@ The expected large-scale power is highly sensitive to the value of $\fnl$ such t
 \begin{equation}\label{eq:likelihood}
 -2\log \mathcal{L} = (\log \tilde{C}(\Theta)-\log \tilde{C})^{\dagger} \mathbb{C}^{-1} (\log \tilde{C}(\Theta)-\log \tilde{C}),
 \end{equation}
-where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ log-normal simulations. Log-normal simulations have been commonly used and validated to estimate the covariance matrices for galaxy density fields, and non-linear effects are subdominant on the scales of interest to $\fnl$ \citep[see, e.g.,][]{2017MNRAS.466.1444C, 2021MNRAS.508.3125F}. We also test for the robustness of our results against an alternative covariance constructed from the $\fnl=76.9$ mocks. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$.
-
-
-\subsection{Characterization of remaining systematics}
-\label{ssec:characterization}
-
-One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data remove the clustering signal and induce additional biases in the inferred parameter. The neural network approach is more prone to this issue compared to the linear approach due to its increased degrees of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling the spurious fluctuations in the galaxy density field. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are estimated to have a negligible impact on baryon acoustic oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over-correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction in the hope of ensuring that the constraints are as accurate and reliable as possible; one such approach is to reduce the dimensionality of the problem. 
-
-Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps while controlling the over-correction effect. Below, we describe how we achieve this objective, by employing a series of simulations along with the residual systematics that we construct based on the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. We test different sets of the imaging systematic maps to identify the optimal set of the feature maps:
-\begin{enumerate}[itemindent=*]
-\item \textbf{Two maps}: Extinction, depth in z.
-\item \textbf{Three maps}: Extinction, depth in z, psfsize in r.
-\item \textbf{Four maps}: Extinction, depth in z, psfsize in r, stellar density.
-\item \textbf{Five maps}: Extinction, depth in z, psfsize in r, neutral hydrogen density, and photometric calibration in z.
-\item \textbf{Eight maps}: Extinction, depth in $grzW1$, psfsize in $grz$.
-\item \textbf{Nine maps}: Extinction, depth in $grzW1$, psfsize in $grz$, stellar density.
-\end{enumerate}
-
-\begin{figure*}
-\centering
-\includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
-\caption{The square of the cross power spectra between the DESI LRG targets and imaging systematic maps normalized by the auto power spectrum of the imaging systematic maps; see equation \ref{eq:cx}. The systematic maps considered are Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the cross spectra before imaging systematic correction. The red, blue and orange curves represent the results after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $97.5$ percentile from cross correlating the imaging systematic maps and the $\fnl=0$ and $76.9$ lognormal density fields, respectively.}\label{fig:clxmock}
-\end{figure*}
-
-It is imperative to note that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints, and that the auto power spectrum and $\fnl$ measurements are unblinded only after our mitigation methods passed our rigorous tests for residual systematics. 
-
-\begin{figure*}
-\centering
-\includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{two maps}, \textit{three maps}, and \textit{eight maps}, respectively. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.9$, respectively.}\label{fig:nbarmock}
-\end{figure*}
-
-
-\begin{figure}
-\raggedright
-\includegraphics[width=0.45\textwidth]{chi2test.pdf}
-\includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.9$.}\label{fig:chi2test}
-\end{figure}
-
-
-\subsubsection{Cross power spectrum}
-
-We characterize the cross correlations between the galaxy density and imaging systematic maps by
-\begin{equation}
-\tilde{C}_{X, \ell} = [\tilde{C}_{x_{1}, \ell}, \tilde{C}_{x_{2}, \ell}, \tilde{C}_{x_{3}, \ell}, ..., \tilde{C}_{x_{9}, \ell}],
-\end{equation}
-where $\tilde{C}_{x_{i}, \ell}$ represents the the square of the cross power spectrum between the galaxy density and $i^{\rm th}$ imaging map, $x_{i}$, divided by the auto power spectrum of $x_{i}$:
-\begin{equation}\label{eq:cx}
-\tilde{C}_{x_{i}, \ell} = \frac{(\tilde{C}_{gx_{i}, \ell})^{2}}{\tilde{C}_{x_{i}x_{i},\ell}}.
-\end{equation}
-With this normalization, $\tilde{C}_{x_{i}, \ell}$ estimates the contribution of systematics at every multipole up to the linear order to the galaxy power spectrum. Then, the $\chi^{2}$ value for the cross power spectra is calculated via,
-\begin{equation}\label{eq:cx_chi2}
-\chi^{2} = \tilde{C}^{T}_{X, \ell} \mathbb{C}_{X}^{-1} \tilde{C}_{X, \ell},
-\end{equation}
-where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the LRG sample with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
-
-We identify extinction and depth in the z band as two primary potential contaminants, and run the linear model with these two maps to derive the systematic weights. Linear two maps is the most conservative systematic treatment method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. Compared with the linear three maps method, we find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural networks with four, five, and nine maps to further examine the robustness of our cleaning methods. Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in z) as identified from the Pearson correlation. With linear two maps (red dashed curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Regression against extinction and depth in the z-band helps mitigate large-scale cross correlations ($\ell < 6$), but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (blue dot-dashed curve) approach alleviates the cross power spectrum against psfsize in r. Additionally, nonlinear three maps (green dashed curve) can reduce the cross correlations against both the r and z-band psfsize maps, which shows the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps (orange dotted curve) and nonlinear four maps (pink dot-dashed curve). 
-
-\subsubsection{Mean density contrast}
-We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
-\begin{equation}
-\delta_{x_{j}} = ({\overline{\rho}})^{-1} \frac{\sum_{i} \rho_{i} W_{i}}{\sum_{i} W_{i}} \mr{- 1},
-\end{equation}
-where $\overline{\rho}$ is the global mean galaxy density, $W_{i}$ is the survey window in pixel $i$, and the summations over $i$ are evaluated from the pixels in every bin of $x_{j}$. We compute the histograms against all nine imaging properties (see Figure \ref{fig:ng}). We use a set of eight equal-width bins for every imaging map, which results in a total of 72 bins. Then, we construct the total mean density contract as,
-\begin{equation}
-\delta_{X} = [\delta_{x_{1}}, \delta_{x_{2}}, \delta_{x_{3}}, ..., \delta_{x_{9}}],
-\end{equation}
-and the total residual error as,
-\begin{equation}
-\chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
-\end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of nonlinear systematic effects. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
-
-Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cross spectrum (top) and mean density contrast (bottom) statistics obtained from lognormal mocks with different $\fnl$ values. The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology. No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values. DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}.
-
-After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative nonlinear three maps approach reduces $\chi^{2}$ significantly with $p$-value$=0.59$, supporting the need for nonlinear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{nonlinear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{nonlinear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$. The small impact on $\chi^{2}$ suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{The nonlinear method with nine maps is our most aggressive treatment which results in the lowest residual errors, $\chi^{2}=39.7$ ($p$-value = $>0.99$) and $49.1$ ($p$-value = $0.88$), respectively, for the mean density and cross-power spectrum statistics. The $p$-values are obtained from the comparison to the clean mocks that have had not mitigation applied to them. To assess whether the extra reduction in the $\chi^{2}$ (by using the extra maps in the non-linear nine maps) indicates over-correction will require running both methods on the clean mocks and characterizing the shift observed in the mocks. \textbf{MR: Look at the mock chi2 after mitigation.}}
-
-The tests conducted here demonstrate the effectiveness of various cleaning approaches for the LRG sample without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with nonlinear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the nonlinear three maps approach is optimal, as adding more imaging systematics maps may exacerbate over-correction issues.
-
-
-\begin{table}
-  \caption{Mean density and cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ clean mocks \mr{that have had no mitigation applied to them}.}\label{tab:chi2test}
-  \begin{tabular}{lcccc}
-    \hline
-    \hline
-    \multirow{2}{*}{\textbf{Method}} &
-      \multicolumn{2}{c}{\textbf{Mean Density}} &
-      \multicolumn{2}{c}{\textbf{Cross Spectrum}} \\
-    & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
-    \hline
-   No Weight & 679.8 & < 0.001 & 20014.8 & < 0.001 \\
-   Linear Two Maps & 178.8 & < 0.001 & 375.1 & < 0.001\\
-   Linear Three Maps & 130 & < 0.001 & 195.9 & 0.04\\
-   Linear Eight Maps & 90 & 0.08 & 129.2 & 0.24\\
-   Nonlinear Three Maps & 74.3 & 0.39  & 79.3 & 0.59\\
-   Nonlinear Four Maps & 73.2 & 0.42 & 70.9 & 0.69\\  
-   \mr{Nonlinear Nine Maps} & \mr{39.7} & \mr{> 0.99} & \mr{49.1} & \mr{0.88} \\
-    \hline
-  \end{tabular}
-\end{table}
+where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance on $\log\tilde{C}$ constructed from the $\fnl=0$ log-normal simulations. Log-normal simulations have been commonly used and validated to estimate the covariance matrices for galaxy density fields, and non-linear effects are subdominant on the scales of interest to $\fnl$ \citep[see, e.g.,][]{2017MNRAS.466.1444C, 2021MNRAS.508.3125F}. We also test for the robustness of our results against an alternative covariance constructed from the $\fnl=76.9$ mocks. Flat priors are implemented for all parameters: $\fnl \in [-1000, 1000]$, $N_{\rm shot} \in [-0.001, 0.001]$, and $b \in [0, 5]$. 
 
 
 \subsection{Calibration of over-correction}\label{ssec:calibration}
 
-The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.}\mr{mitigating with more maps should remove more modes and thus both bias the $\fnl$ estimation and the uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{One of the main advantages of having two sets of mocks with low and high power at low $\ell$ is that it gives a model for mapping the whole posterior and thus learning how the $\fnl$ constraints degrade as the imaging systematic correction gets greater.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} presents the impact of the nonlinear methods on the mock power spectra, and here we summarize the relevant details for the calibration of over-correction.}
+The template-based mitigation of imaging systematics removes some of the true clustering signal, and \mout{the amount of the removed signal increases as more maps are used for the regression.} \mr{mitigating with more maps should remove more modes and thus both bias the $\fnl$ estimation and the uncertainty.} We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. \mr{One of the main advantages of having two sets of mocks with low and high power at low $\ell$ is that it gives a model for mapping the whole posterior and thus learning how the $\fnl$ constraints degrade as the imaging systematic correction gets greater.}  We apply the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. \mr{Appendix \ref{ssec:contmocks} presents the impact of the non-linear methods on the mock power spectra, and here we summarize the relevant details for the calibration of over-correction.}
 
 Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates \mr{from the mean of the mocks} are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
@@ -209,9 +111,9 @@ Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ b
 \end{figure}
 
 
-\mr{We find significant shifts in the best-fitting estimates of $\fnl$ from the fits to the mean spectra (summarized in Table \ref{tab:contmocksmcmc}). For $\fnl=0$, we obtain $\Delta \fnl=-12$ for nonlinear three maps, $-20$ for nonlinear three maps, and $-27$ for nonlinear nine maps. Whereas, bigger shifts are noticed for $\fnl=76.9$: we find $\Delta \fnl=-23$ for nonlinear three maps, $-39$ for nonlinear four maps, and $-72$ for nonlinear nine maps. \textbf{MR: TEST with FNL=0 ONLY.}}
+\mr{As summarized in Table \ref{tab:contmocksmcmc}, we find significant shifts in the best-fitting estimates of $\fnl$ from the fits to the mean spectra. Specifically, we obtain $\Delta \fnl=-12$ for non-linear three maps, $-20$ for non-linear three maps, and $-27$ for non-linear nine maps when analyzing the $\fnl=0$ mocks. Whereas, bigger shifts are noticed for $\fnl=76.9$: we find $\Delta \fnl=-23$ for non-linear three maps, $-39$ for non-linear four maps, and $-72$ for non-linear nine maps.}
 
-To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for nonlinear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. The uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
+To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for non-linear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. The uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
 
 
 \begin{table}
