--- a/refs.bib
+++ b/refs.bib
@@ -2254,3 +2254,42 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{2019MNRAS.484.4127A,
+       author = {{Alonso}, David and {Sanchez}, Javier and {Slosar}, An{\v{z}}e and {LSST Dark Energy Science Collaboration}},
+        title = "{A unified pseudo-C$_{{\ensuremath{\ell}}}$ framework}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: numerical, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2019,
+        month = apr,
+       volume = {484},
+       number = {3},
+        pages = {4127-4151},
+          doi = {10.1093/mnras/stz093},
+archivePrefix = {arXiv},
+       eprint = {1809.09603},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.484.4127A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2008PhRvD..77b3512L,
+       author = {{Loverde}, Marilena and {Hui}, Lam and {Gazta{\~n}aga}, Enrique},
+        title = "{Lensing corrections to features in the angular two-point correlation function and power spectrum}",
+      journal = {\prd},
+     keywords = {98.80.-k, 95.30.Sf, Cosmology, Relativity and gravitation, Astrophysics},
+         year = 2008,
+        month = jan,
+       volume = {77},
+       number = {2},
+          eid = {023512},
+        pages = {023512},
+          doi = {10.1103/PhysRevD.77.023512},
+archivePrefix = {arXiv},
+       eprint = {0708.0031},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008PhRvD..77b3512L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
